fixed button spacing issues

--- a/css/tw_style.css
+++ b/css/tw_style.css
@@ -21,6 +21,18 @@
 }
 
 .btn-xlg{
-  width: 500px;
-  height: 100px;
+  font-size:28px; 
+  border-color: #d3d3d3; 
+  border-style: solid; 
+  border-width: 3px; 
+  width:370px; 
+  color:#7e7e7e;
+}
+
+.tw-blue{
+  background-color: #80D8FF;
+}
+
+.tw-blue:hover {
+    background-color: ##00B0FF !important;
 }
